# winc-transfer

./: .gitignore  ENCRYPTION_PLAN.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  store.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  import.rs  lib.rs  model.rs  net.rs  sources.rs
src/components/: Cable.tsx  RolePicker.tsx  SessionController.tsx  StepRail.tsx
src/lib/: api.ts  format.ts  types.ts
src/steps/: CodeStep.tsx  ConnectStep.tsx  DoneStep.tsx  PairStep.tsx  SelectStep.tsx  TransferStep.tsx
src/styles/: app.css  global.css  tokens.css
