[package]
name = "winc"
version = "0.1.0"
description = "WINC — direct-cable PC data crossing"
authors = ["you"]
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

# transfer engine
rand = "0.8"
walkdir = "2.5"
dirs = "5.0"
if-addrs = "0.13"
